--- a/4-Columns-Info-Icons.css
+++ b/4-Columns-Info-Icons.css
@@ -33,8 +33,8 @@
 
 @font-face {
 	font-family: 'Franklin Gothic';
-	src: url(/hinted-FranklinGothic-Heavy.woff2) format('woff2'),
-	url(/hinted-FranklinGothic-Heavy.woff) format('woff');
+	src: url(https://github.com/MitchellArtz/CSSHosting/hinted-FranklinGothic-Heavy.woff2) format('woff2'),
+	url(https://github.com/MitchellArtz/CSSHosting/hinted-FranklinGothic-Heavy.woff) format('woff');
 	font-weight: 900;
 	font-style: normal;
 	font-display: swap;
